--- a/WebApp/Views/DoctorAppointment/PartialDoctorViewAppDetail.cshtml
+++ b/WebApp/Views/DoctorAppointment/PartialDoctorViewAppDetail.cshtml
@@ -56,7 +56,7 @@
     { rov = Model.rov; }
     if (Model.chiefComplaints != null)
     { chiefComplaints = Model.chiefComplaints; }
-    if (Model.paymentAmt != null) { amount = Model.paymentAmt.ToString(); }
+    if (Model.paymentAmt != null) { amount = (Model.paymentAmt).ToString(); }
 
 
     if (languages == "") { languages = "N.A"; }
