--- a/WebApp/Views/DoctorProfile/Index.cshtml
+++ b/WebApp/Views/DoctorProfile/Index.cshtml
@@ -637,6 +637,7 @@
         }
 
         $("#btnSaveProfile").click(function () {
+          //  $('.btn.btn-primary.export').trigger('click');
 
             try {
                 if (validateProfileForm()) {
