--- a/WebApp/Views/PatientProfile/Index.cshtml
+++ b/WebApp/Views/PatientProfile/Index.cshtml
@@ -521,6 +521,7 @@
         }
 
         $("#btnSaveProfile").click(function () {
+           // $('.btn.btn-primary.export').trigger('click');
            
             try {
                 if (validateProfileForm()) {
