--- a/WebApp/Views/Appointment/PartialViewDetail.cshtml
+++ b/WebApp/Views/Appointment/PartialViewDetail.cshtml
@@ -66,7 +66,7 @@
     }
     if (Model.paymentAmt != null)
     {
-        amount = (Model.paymentAmt/100).ToString();
+        amount = (Model.paymentAmt).ToString();
     }
     if (Model.PatientVM != null)
     { pharmacy = Model.PatientVM.pharmacy; }
